# ssh-monitor

./: .gitignore  CLAUDE.md  CODEX.md  Cargo.toml  README.md  _typos.toml  install.sh
.github/workflows/: check-spell.yml  ci.yml  release.yml
docs/: DEVELOPMENT.md
src/: main.rs  ssh_config.rs
src/backend/: mod.rs
src/backend/db/: mod.rs
src/backend/db/cpu/: commands.rs  queries.rs
src/backend/db/disk/: commands.rs  queries.rs
src/backend/db/gpu/: commands.rs  queries.rs
src/backend/db/mem/: commands.rs  queries.rs
src/backend/jobs/: cpu.rs  disk.rs  executor.rs  gpu.rs  job.rs  mem.rs  mod.rs
src/backend/ssh/: mod.rs
src/tui/: mod.rs  states_update.rs
src/tui/host_details/: mod.rs  states.rs  timeline_chart.rs  update.rs  view.rs
src/tui/list_ssh/: mod.rs  states.rs  update.rs  view.rs  view_table_row.rs
