[package]
name = "ssh-monitor"
version = "0.1.0"
description = "An ssh monitoring tool."
authors = ["Akira Noda <61897166+tsugumi-sys@users.noreply.github.com>"]
license = "MIT"
edition = "2024"

[dependencies]
color-eyre = "0.6.3"
crossterm = { version = "0.28.1", features = ["event-stream"] }
futures = "0.3.31"
ratatui = "0.29.0"
tokio = { version = "1.40.0", features = ["full"] }
