[package]
name = "ssh-monitor"
version = "0.1.5"
description = "An ssh monitoring tool."
authors = ["Akira Noda <tidemark0105@gmail.com>"]
license = "MIT"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
async-trait = "0.1.89"
chrono = { version = "0.4.41", features = ["serde"] }
color-eyre = "0.6.3"
crossterm = { version = "0.28.1", features = ["event-stream"] }
directories = "6.0.0"
dirs = "6.0.0"
env_logger = "0.11.8"
erased-serde = "0.4.6"
eyre = "0.6.12"
futures = "0.3.31"
log = "0.4.27"
md5 = "0.8.0"
ratatui = "0.29.0"
rusqlite = { version = "0.37.0", features = ["bundled"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
ssh2 = "0.9.5"
ssh2-config = "0.5.4"
tokio = { version = "1.47.1", features = ["full"] }
